--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-    "name": "Bgt-V2",
+    "name": "ମୁସିକ୍",
     "description": "ᴀ ᴛᴇʟᴇɢʀᴀᴍ ᴍᴜꜱɪᴄ ᴘʟᴀʏᴇʀ ʙᴏᴛ, ᴡʀɪᴛᴛᴇɴ ɪɴ ᴘʏᴛʜᴏɴ ᴡɪᴛʜ ᴘʏʀᴏɢʀᴀᴍ ᴀɴᴅ ᴘʏ-ᴛɢᴄᴀʟʟꜱ.",
-    "repository": "https://github.com/BikashHalderNew/Bgtplayer",
-    "logo": "https://telegra.ph/file/4d7a997a6c8c4eb406829.jpg",
+    "repository": "https://github.com/ASIFXQUEEN/BGTXQUEENXMUSIC",
+    "logo": "https://graph.org/file/1cb36adf83e0407f9961b.jpg",
     "keywords": [
     "python3",
     "telegram",
@@ -16,12 +16,12 @@
     "env": {
       "API_ID": {
         "description": "Get this value from https://my.telegram.org",
-        "value": "25496841",
+        "value": "",
         "required": true
       },
       "API_HASH": {
         "description": "Get this value from https://my.telegram.org",
-        "value": "d7ed3ebb8f4323c37c5ffcac40e677d4",
+        "value": "",
         "required": true
       },
       "BOT_TOKEN": {
@@ -31,21 +31,21 @@
       },
       "MONGO_DB_URI": {
         "description": "Get a mongodb url from https://cloud.mongodb.com. Below MONGOdb only for Test Don't Use Otherwise Your Bot Hack By Any Hacker",
-        "value": "mongodb+srv://Bikash:Bikash@bikash.yl2nhcy.mongodb.net/?retryWrites=true&w=majority",
+        "value": "",
         "required": true
       },
       "MUSIC_BOT_NAME": {
         "description": "A name for your Music Bot. You can use special characters",
-        "value": "🌟⃝🌸𓆩🇧𝗚𝗧🎸🇲𝗨𝗦𝗜𝗖🎸🇧𝗢𝗧𓆪💫⃟👑 ",
+        "value": "",
         "required": true
       },
       "OWNER_ID": {
         "description": "The user id(s) of user(s) whom you would like to add as a OWNER. Multiple values shall be seperated with a space.",
-        "value": "1439222689",
+        "value": "",
         "required": true
       },
       "STRING_SESSION": {
-        "description": "A Pyrogram v2 String Session. One Assistant is Compulsory.",
+        "description": "A Pyrogram v2 String by:- @QUEENALLSTRINGGEN_BOT Session. One Assistant is Compulsory.",
         "value": "",
         "required": true
       },
